fix trashcan postion on mobile view

--- a/client/src/components/styles/surveyList.css
+++ b/client/src/components/styles/surveyList.css
@@ -10,6 +10,6 @@
   color: red;
   position: relative;
   float: right;
-  bottom: 10%;
-  right: 20px;
+  bottom: 2rem;
+  right: 1.2rem;
 }
